--- a/ASSETS/css/main.css
+++ b/ASSETS/css/main.css
@@ -1,5 +1,27 @@
-html {
+html,
+body {
+    width: 100%;
+    height: 100%;
     scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
 }
 
 #fb_logo {
@@ -41,4 +63,10 @@ html {
 
 a {
     cursor: pointer;
+}
+
+.carousel-proj-img {
+    display: block !important;
+    max-width: 100% !important;
+    height: 900px !important;
 }
