Updated linking to the resume.

--- a/partials/about.html
+++ b/partials/about.html
@@ -8,7 +8,7 @@
             <p>22 Pag-Asa Street Barangay Pag-Asa Mandaluyong City</p>
             <p>09214611784</p>
             <p>raygajason@gmail.com</p>
-            <p><a href="../ASSETS/JraygaResume.docx" class="btn btn-danger" role="button"><i
+            <p><a href="./ASSETS/JraygaResume.docx" class="btn btn-danger" role="button"><i
                         class="glyphicon glyphicon-download"></i>
                     Download Resume/CV</a></p>
 
