--- a/ASSETS/css/main.css
+++ b/ASSETS/css/main.css
@@ -1,32 +1,42 @@
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+    display: none !important;
+}
+
 html,
 body {
-    width: 100%;
-    height: 100%;
+    width          : 100%;
+    height         : 100%;
+    margin         : 0;
     scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background-color: #F5F5F5;
+    box-shadow        : inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius     : 10px;
+    background-color  : #F5F5F5;
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width           : 12px;
     background-color: #F5F5F5;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
+    border-radius     : 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color: #555;
+    box-shadow        : inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color  : #555;
 }
 
 #fb_logo {
     font-size: 35px;
-    cursor: pointer
+    cursor   : pointer
 }
 
 #fb_logo:hover {
@@ -34,8 +44,8 @@ body {
 }
 
 #google_logo {
-    font-size: 35px;
-    cursor: pointer;
+    font-size  : 35px;
+    cursor     : pointer;
     margin-left: 5%
 }
 
@@ -44,8 +54,8 @@ body {
 }
 
 #linkedin_logo {
-    font-size: 35px;
-    cursor: pointer;
+    font-size  : 35px;
+    cursor     : pointer;
     margin-left: 5%
 }
 
@@ -65,8 +75,24 @@ a {
     cursor: pointer;
 }
 
-.carousel-proj-img {
-    display: block !important;
-    max-width: 100% !important;
-    height: auto !important;
+.profile-img {
+    display      : block;
+    max-width    : 100%;
+    height       : auto;
+    border-radius: 166px;
+}
+
+.list-group-item:hover {
+    z-index         : 2;
+    color           : #fff;
+    background-color: #DF691A;
+    border-color    : #DF691A;
+    cursor          : pointer;
+}
+
+.card-project-img {
+    display  : block;
+    max-width: 286px;
+    height   : auto;
+    margin   : 25px auto;
 }
