--- a/partials/about.html
+++ b/partials/about.html
@@ -1,12 +1,12 @@
 <!-- About-->
 <section id="about" class="about-section">
-    <div class="container">
-        <header class="text-center">
-            <h2 data-animate="fadeInDown" class="title">About me</h2>
-        </header>
-        <div class="row">
-            <div data-animate="fadeInUp" class="col-lg-6">
-                <!-- <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all
+  <div class="container">
+    <header class="text-center">
+      <h2 data-animate="fadeInDown" class="title">About me</h2>
+    </header>
+    <div class="row">
+      <div data-animate="fadeInUp" class="col-lg-6">
+        <!-- <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all
                     projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr
                     elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
                 <p>Received overcame oh sensible so at an. Formed do change merely to county it. <strong>Am separate
@@ -17,87 +17,133 @@
                 <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all
                     projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr
                     elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p> -->
-                <p>
-                    Outgoing young Web Developer. Knowledgeable in backend and frontend development. Was the Main
-                    Developer for the very first Applicant Tracking Software and Resume Bank in the Philippines.
-                    Using numerous programming languages for Dynamic Web Application and Mobile Application
-                    development.
-                </p>
-                <p>Click my picture below to download my resume :)</p>
-            </div>
-            <div data-animate="fadeInUp" class="col-lg-6">
-                <div class="skill-item">
-                    <div class="progress-title">PHP</div>
-                    <div class="progress">
-                        <div role="progressbar" style="width: 60%" aria-valuenow="0" aria-valuemin="60"
-                            aria-valuemax="100" class="progress-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-item">
-                    <div class="progress-title">Javascript</div>
-                    <div class="progress">
-                        <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="60"
-                            aria-valuemax="100" class="progress-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-item">
-                    <div class="progress-title">HTML coding</div>
-                    <div class="progress">
-                        <div role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
-                            aria-valuemax="100" class="progress-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-item">
-                    <div class="progress-title">CSS & Bootstrap</div>
-                    <div class="progress">
-                        <div role="progressbar" style="width: 70%" aria-valuenow="80" aria-valuemin="0"
-                            aria-valuemax="100" class="progress-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-item">
-                    <div class="progress-title">Ionic Angular</div>
-                    <div class="progress">
-                        <div role="progressbar" style="width: 55%" aria-valuenow="80" aria-valuemin="0"
-                            aria-valuemax="100" class="progress-bar"></div>
-                    </div>
-                </div>
-                <!-- <div class="skill-item">
+        <p>
+          Outgoing young Web Developer. Knowledgeable in backend and frontend
+          development. Was the Main Developer for the very first Applicant
+          Tracking Software and Resume Bank in the Philippines. Using numerous
+          programming languages for Dynamic Web Application and Mobile
+          Application development.
+        </p>
+        <p>Click my picture below to download my resume :)</p>
+      </div>
+      <div data-animate="fadeInUp" class="col-lg-6">
+        <div class="skill-item">
+          <div class="progress-title">PHP</div>
+          <div class="progress">
+            <div
+              role="progressbar"
+              style="width: 60%"
+              aria-valuenow="0"
+              aria-valuemin="60"
+              aria-valuemax="100"
+              class="progress-bar"
+            ></div>
+          </div>
+        </div>
+        <div class="skill-item">
+          <div class="progress-title">Javascript</div>
+          <div class="progress">
+            <div
+              role="progressbar"
+              style="width: 70%"
+              aria-valuenow="70"
+              aria-valuemin="60"
+              aria-valuemax="100"
+              class="progress-bar"
+            ></div>
+          </div>
+        </div>
+        <div class="skill-item">
+          <div class="progress-title">HTML coding</div>
+          <div class="progress">
+            <div
+              role="progressbar"
+              style="width: 80%"
+              aria-valuenow="80"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              class="progress-bar"
+            ></div>
+          </div>
+        </div>
+        <div class="skill-item">
+          <div class="progress-title">CSS & Bootstrap</div>
+          <div class="progress">
+            <div
+              role="progressbar"
+              style="width: 70%"
+              aria-valuenow="80"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              class="progress-bar"
+            ></div>
+          </div>
+        </div>
+        <div class="skill-item">
+          <div class="progress-title">Ionic Angular</div>
+          <div class="progress">
+            <div
+              role="progressbar"
+              style="width: 55%"
+              aria-valuenow="80"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              class="progress-bar"
+            ></div>
+          </div>
+        </div>
+        <!-- <div class="skill-item">
                     <div class="progress-title">SEO</div>
                     <div class="progress">
                         <div role="progressbar" style="width: 30%" aria-valuenow="90" aria-valuemin="0"
                             aria-valuemax="100" class="progress-bar"></div>
                     </div>
                 </div> -->
-                <div class="skill-item">
-                    <div class="progress-title">Angular</div>
-                    <div class="progress">
-                        <div role="progressbar" style="width: 65%" aria-valuenow="90" aria-valuemin="0"
-                            aria-valuemax="100" class="progress-bar"></div>
-                    </div>
-                </div>
-                <div class="skill-item">
-                    <div class="progress-title">AngularJS 1.x</div>
-                    <div class="progress">
-                        <div role="progressbar" style="width: 75%" aria-valuenow="90" aria-valuemin="0"
-                            aria-valuemax="100" class="progress-bar"></div>
-                    </div>
-                </div>
-                <!-- <div class="skill-item">
+        <div class="skill-item">
+          <div class="progress-title">Angular</div>
+          <div class="progress">
+            <div
+              role="progressbar"
+              style="width: 65%"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              class="progress-bar"
+            ></div>
+          </div>
+        </div>
+        <div class="skill-item">
+          <div class="progress-title">AngularJS 1.x</div>
+          <div class="progress">
+            <div
+              role="progressbar"
+              style="width: 75%"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              class="progress-bar"
+            ></div>
+          </div>
+        </div>
+        <!-- <div class="skill-item">
                     <div class="progress-title">SEM</div>
                     <div class="progress">
                         <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                             aria-valuemax="100" class="progress-bar progress-bar-skill5"></div>
                     </div>
                 </div> -->
-            </div>
-            <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5">
-                <a href="./ASSETS/Jrayga.docx" title="Download Resume">
-                    <img src="./ASSETS/img/jasonrayga.jpg" alt="This is me - Jason Rayga"
-                        class="image rounded-circle img-fluid">
-                </a>
-            </div>
-        </div>
+      </div>
+      <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5">
+        <a href="./ASSETS/JasonRayga.pdf" title="Download Resume">
+          <img
+            src="./ASSETS/img/jasonrayga.jpg"
+            alt="This is me - Jason Rayga"
+            class="image rounded-circle img-fluid"
+          />
+        </a>
+      </div>
     </div>
+  </div>
 </section>
 <!-- Service-->
 <!-- <section id="services" class="bg-gradient services-section">
@@ -276,65 +322,80 @@
 _________________________________________________________
 -->
 <section id="references">
-    <div class="container">
-        <div class="col-sm-12">
-            <div class="mb-5 text-center">
-                <h2 data-animate="fadeInUp" class="title">My work</h2>
-                <p data-animate="fadeInUp" class="lead">I have worked on dozens of projects so I have picked only
-                    the latest for you.</p>
-            </div>
-            <!-- <ul id="filter" data-animate="fadeInUp">
+  <div class="container">
+    <div class="col-sm-12">
+      <div class="mb-5 text-center">
+        <h2 data-animate="fadeInUp" class="title">My work</h2>
+        <p data-animate="fadeInUp" class="lead">
+          I have worked on dozens of projects so I have picked only the latest
+          for you.
+        </p>
+      </div>
+      <!-- <ul id="filter" data-animate="fadeInUp">
                 <li class="active"><a href="#" data-filter="all">All</a></li>
                 <li><a href="#" data-filter="webdesign">Webdesign</a></li>
                 <li><a href="#" data-filter="seo">SEO</a></li>
                 <li><a href="#" data-filter="marketing">Marketing</a></li>
                 <li><a href="#" data-filter="other">Other</a></li>
             </ul> -->
-            <div id="detail">
-                <div class="row">
-                    <div class="col-lg-10 mx-auto"><span class="close">×</span>
-                        <div id="detail-slider" class="owl-carousel owl-theme"></div>
-                        <div class="text-center">
-                            <h1 id="detail-title" class="title"></h1>
-                        </div>
-                        <div id="detail-content"></div>
-                    </div>
-                </div>
+      <div id="detail">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <span class="close">x</span>
+            <div id="detail-slider" class="owl-carousel owl-theme"></div>
+            <div class="text-center">
+              <h1 id="detail-title" class="title"></h1>
             </div>
-            <!-- Reference detail-->
-            <div id="references-masonry" data-animate="fadeInUp">
-                <div class="row">
-                    <div data-category="webapp" class="reference-item col-lg-3 col-md-6"
-                        ng-repeat="(k,v) in worksImgAndDesc track by $index">
-                        <div class="reference">
-                            <a href="">
-                                <img src="{{v.img}}" alt="{{v.title}}" class="image-responsive">
-                                <div class="overlay">
-                                    <div class="inner">
-                                        <h3 class="h4 reference-title">{{v.title}}</h3>
-                                        <!-- <p>Short project description goes here...</p> -->
-                                    </div>
-                                </div>
-                            </a>
-                            <div data-images="{{v.img}}" class="sr-only reference-description">
-                                <p>
-                                    {{v.desc}}
-                                </p>
-                                <!-- <p>Sitting mistake towards his few country ask. You delighted two rapturous six
+            <div id="detail-content"></div>
+          </div>
+        </div>
+      </div>
+      <!-- Reference detail-->
+      <div id="references-masonry" data-animate="fadeInUp">
+        <div class="row">
+          <div
+            data-category="webapp"
+            class="reference-item col-sm-12 col-md-4 col-lg-4"
+            ng-repeat="(k,v) in worksImgAndDesc track by $index"
+          >
+            <div class="reference">
+              <a href="">
+                <img
+                  src="{{v.img}}"
+                  alt="{{v.title}}"
+                  class="image-responsive"
+                />
+                <div class="overlay">
+                  <div class="inner">
+                    <h3 class="h4 reference-title">{{v.title}}</h3>
+                    <p>{{v.shortDesc}}</p>
+                  </div>
+                </div>
+              </a>
+              <div
+                data-images="{{v.img}}"
+                class="sr-only reference-description"
+              >
+                <p>{{v.desc}}</p>
+                <!-- <p>Sitting mistake towards his few country ask. You delighted two rapturous six
                                     depending objection happiness something the. Off nay impossible dispatched
                                     partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy
                                     basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended
                                     neglected on my earnestly by. Sex scale sir style truth ought.</p> -->
-                                <p class="buttons text-center">
-                                    <a href="{{v.url}}" target="_blank" class="btn btn-outline-primary"><i
-                                            class="fa fa-globe"></i> Visit </a>
-                                    <!-- <a href="javascript:void(0);" class="btn btn-outline-primary"><i
+                <p class="buttons text-center">
+                  <a
+                    href="{{v.url}}"
+                    target="_blank"
+                    class="btn btn-outline-primary"
+                    ><i class="fa fa-globe"></i> Visit
+                  </a>
+                  <!-- <a href="javascript:void(0);" class="btn btn-outline-primary"><i
                                             class="fa fa-download"></i> Download case study</a> -->
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
                         <div class="reference"><a href="#"><img src="./ASSETS/it-worker-theme/img/portfolio-1.jpg"
                                     alt="" class="img-fluid">
                                 <div class="overlay">
@@ -566,10 +627,10 @@ _________________________________________________________
                             </div>
                         </div>
                     </div> -->
-                </div>
-            </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
 <!-- Customers-->
 <!-- <section id="customers" class="customers-section bg-gray">
