--- a/partials/about.html
+++ b/partials/about.html
@@ -368,7 +368,7 @@ _________________________________________________________
                 <div class="overlay">
                   <div class="inner">
                     <h3 class="h4 reference-title">{{v.title}}</h3>
-                    <p>{{v.shortDesc}}</p>
+                    <p><small>{{v.shortDesc}}</small></p>
                   </div>
                 </div>
               </a>
