--- a/ASSETS/it-worker-theme/css/custom.css
+++ b/ASSETS/it-worker-theme/css/custom.css
@@ -10,34 +10,36 @@
 
 html,
 body {
-    width          : 100%;
-    height         : 100%;
-    margin         : 0;
+    height: 100%;
+}
+
+body {
+    margin: 0;
     scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    box-shadow        : inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius     : 10px;
-    background-color  : #F5F5F5;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
 }
 
 ::-webkit-scrollbar {
-    width           : 12px;
+    width: 12px;
     background-color: #F5F5F5;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius     : 10px;
+    border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-    box-shadow        : inset 0 0 6px rgba(0, 0, 0, .3);
-    background-color  : #555;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
 }
 
 #fb_logo {
     font-size: 35px;
-    cursor   : pointer
+    cursor: pointer
 }
 
 #fb_logo:hover {
@@ -45,8 +47,8 @@ body {
 }
 
 #google_logo {
-    font-size  : 35px;
-    cursor     : pointer;
+    font-size: 35px;
+    cursor: pointer;
     margin-left: 5%
 }
 
@@ -55,8 +57,8 @@ body {
 }
 
 #linkedin_logo {
-    font-size  : 35px;
-    cursor     : pointer;
+    font-size: 35px;
+    cursor: pointer;
     margin-left: 5%
 }
 
@@ -77,29 +79,29 @@ a {
 }
 
 .profile-img {
-    display      : block;
-    max-width    : 100%;
-    height       : auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
     border-radius: 166px;
 }
 
 .list-group-item:hover {
-    z-index         : 2;
-    color           : #fff;
+    z-index: 2;
+    color: #fff;
     background-color: #DF691A;
-    border-color    : #DF691A;
-    cursor          : pointer;
+    border-color: #DF691A;
+    cursor: pointer;
 }
 
 .card-project-img {
-    display  : block;
+    display: block;
     max-width: 300px;
-    height   : 160px;
-    margin   : 25px auto;
+    height: 160px;
+    margin: 25px auto;
 }
 
 .image-responsive {
-    height : 150px;
-    width  : 100%;
+    height: 200px;
+    max-width: 100%;
     display: block;
 }
