Updated about message

--- a/partials/about.html
+++ b/partials/about.html
@@ -18,11 +18,12 @@
                     projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr
                     elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p> -->
         <p>
-          Outgoing young Web Developer. Knowledgeable in backend and frontend
-          development. Was the Main Developer for the very first Applicant
-          Tracking Software and Resume Bank in the Philippines. Using numerous
-          programming languages for Dynamic Web Application and Mobile
-          Application development.
+          As an outgoing and experienced web developer, I possess a strong
+          skillset in both backend and frontend development. I have a proven
+          track record of success as the lead developer for the Philippines'
+          first applicant tracking software and resume bank. I am well-versed in
+          various programming languages and have experience creating dynamic web
+          and mobile applications.
         </p>
         <p>Click my picture below to download my resume :)</p>
       </div>
